kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      name: homework-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: homework-pod
    spec:
      volumes:
        - name: shared-volume
          emptyDir: {}
      containers:
        - name: web-server
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-volume
              mountPath: /usr/share/nginx/html
          readinessProbe:
            exec:
              command:
                - ls
                - /usr/share/nginx/html/index.html
            initialDelaySeconds: 5
            periodSeconds: 5
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "rm -f /usr/share/nginx/html/index.html"]
