kubernetes-networks/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  namespace: homework
spec:
  type: ClusterIP
  selector:
    name: homework-pod  
  ports:
    - port: 80
      protocol: TCP
