kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: homework-service
            port: 
              number: 80
      - pathType: Prefix
        path: "/homepage"
        backend:
          service:
            name: homework-service
            port: 
              number: 80
